--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         /* Add styles for the round profile picture */
-        .profile-picture {
+    .Michaelcollege {
             width: 100px; /* Adjust the size as needed */
             height: 100px;
             border-radius: 75%; /* Create a circular shape */
