--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="c:\Users\24ai\Desktop\portfolio\Michaelcollege.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./Michaelcollege.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>SINDHU PRIYA</h1>
             <p>MASTER OF COMPUTER APPLICATION</p>
         </div>
